--- a/among us.html
+++ b/among us.html
@@ -1,6 +1,9 @@
 <!DOCTYPE html>
 <!--
 
+THIS ENTIRE PROGRAM WAS MADE BY SQUISHY @squishypill
+I AM JUST USING THIS TO TEST WHAT I CAN MAKE WORK
+
 Home page: https://www.khanacademy.org/cs/i/6501917627990016
 
 For progress updates join Hc48t2N.
