--- a/video_filters.html
+++ b/video_filters.html
@@ -13,20 +13,21 @@
     height: 375px;
     background-color: #666;
 }
-#canvas {
-  background-color: rgb(225, 225, 225);
+#myCanvas {
+	background-color: rgb(225, 225, 225);
 }
 </style>
 </head>
   
 <body>
     <video autoplay="true" id="videoElement"></video>
-    <canvas id="canvas" width="400px" height="400px"></canvas>
+	
+    <canvas id="myCanvas" width="500px" height="375px"></canvas>
 
 <script>
 var video = document.querySelector("#videoElement");
 
-var canvas = document.getElementById('canvas'), ctx = canvas.getContext('2d');
+var canvas = document.getElementById('myCanvas'), ctx = canvas.getContext('2d');
 
 if (navigator.mediaDevices.getUserMedia) {       
     navigator.mediaDevices.getUserMedia({video: true})
@@ -38,16 +39,10 @@ if (navigator.mediaDevices.getUserMedia) {
   });
 }
 
-function map(value, istart, istop, ostart, ostop) {
-  return ostart + (ostop - ostart) * ((value - istart) / (istop - istart));
-}
-
 function intervalTimer() {
-	ctx.clearRect(0, 0, 400, 400);
+	ctx.drawImage(video, 0, 0, 500, 375);
 	
-	ctx.drawImage(video, 0, 0, 400, 400);
-  
-	var imgData = ctx.getImageData(0, 0, 400, 400);
+	var imgData = ctx.getImageData(0, 0, 500, 375);
 	var temp = imgData.data;
 	for(var i = 0; i < temp.length; i += 4){
 		temp[i] = 255 - temp[i];
@@ -60,7 +55,7 @@ function intervalTimer() {
 
 }
 
-setInterval(intervalTimer, 75);
+setInterval(intervalTimer, 50);
 
 </script>
 </body>
