--- a/black_and_white_animator.html
+++ b/black_and_white_animator.html
@@ -24,7 +24,11 @@
 <h3>Output Size</h3>
 <input type="number" id="outputSizeInput" min="5" max="400" value="200">
 
+<h3>Frames Captured Per Second</h3>
+<input type="number" id="captureRateInput" min="1" max="60" value="10">
+
 <p id="stats">STATS: </p>
+<button type="button" onclick="printData()">Print Data</button>
 <p id="results">RESULTS: </p>
 
 <video id="video" controls autoplay controls muted width="400px" height="400px" style="display:inline-block;"></video>
@@ -65,6 +69,13 @@ var compressBitmap = function(bitmap){
   return data;
 };
 
+var printData = function(){
+	var element = document.createElement("p");
+	element.innerHTML = "<p style='background: rgb(225, 225, 225);'>" + resultData + "];</p>";
+	document.getElementById("results").innerHTML = "";
+	document.getElementById("results").appendChild(element); 
+};
+
 var canvas = document.getElementById('canvas'), ctx = canvas.getContext('2d');
 var video = document.getElementById('video');
 
@@ -79,6 +90,9 @@ var resultData = "[";
 
 var frameCount = 0;
 
+var captureRate = 0;
+var intervalSpeed = 0;
+
 var draw = function() {
 	if(document.getElementById("videoInput").value.length > 0){
 		filterValue = document.getElementById("thresholdInput").value/100;
@@ -88,6 +102,13 @@ var draw = function() {
 			outputSize = 5;
 		}else if(outputSize > 400){
 			outputSize = 400;
+		}
+		
+		captureRate = document.getElementById("captureRateInput").value;
+		if(captureRate < 1){
+			captureRate = 1;
+		}else if(captureRate > 60){
+			captureRate = 60;
 		}
 		
 		var bigger = video.width;
@@ -166,18 +187,17 @@ var draw = function() {
 			document.getElementById("stats").style.color = "red";
 		}
 		
-		if(frameCount % 50 === 0){
-			var element = document.createElement("p");
-			element.innerHTML = "<p style='background: rgb(225, 225, 225);'>" + resultData + "];</p>";
-			document.getElementById("results").innerHTML = "";
-			document.getElementById("results").appendChild(element); 
+		if(Math.ceil(1000/captureRate) !== intervalSpeed){
+			clearInterval(run);
+			intervalSpeed = Math.ceil(1000/captureRate);
+			run = setInterval(draw, intervalSpeed);
 		}
 	}
 	
 	frameCount++;
 }
 
-setInterval(draw, 100);
+var run = setInterval(draw, intervalSpeed);
 
 
 </script>
