--- a/ranked_pairs_voting.html
+++ b/ranked_pairs_voting.html
@@ -2,7 +2,7 @@
 <html>
     <head>
       <meta charset="utf-8">
-          <title>KA GIF 4 U</title>
+          <title>Ranked Pair Voting</title>
       <link rel="shortcut icon" type="image/jpg" href="https://header.tapatalk-cdn.com/c2010061_1511722501.jpg"/>
       <style>
 
