--- a/game_collab.html
+++ b/game_collab.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-	<title>Stereogram</title>
+	<title>Game Collab</title>
 	<script src="https://cdn.jsdelivr.net/npm/p5@1.2.0/lib/p5.js"></script>
 	<style>
 		body {
