--- a/AP_CSP_Final.html
+++ b/AP_CSP_Final.html
@@ -26,7 +26,7 @@
   <body>
     
     <h1 id="title">Platformer Physics</h1>
-    <h3>By: Vincent S.</h3>
+    <h3>By: Vincent</h3>
     
     <p>
       I am going to attempt to show you how to make some basic, but effective platformer physics. My presentation will be using Javascript with the Processing.js library since Javascript is my favorite language and I am most skilled with it. I hope to explain everything clearly so that you could potentially recreate it in another language.
